* Bug fixed caused by a model label ending  or startiong with a space.
* Bug fixed causing the appending of GUI table data to crash.
* Bug fixed causing models using derivedForcing_linearUnconstrainedScaling_dup() to fail during build  (see issue #38)
* Bug fixed with GIF icons not allowing loading of GUI (issue #44).
* Bug fixed that's casued when input head data is not chronologically sorted. Outlier and model construction GUI tabs now wort head data (issue #49).
* Bug fixed in example_TFN_model.m (see issue #50).
* Bug fixed where closing a question dialog (rather than answering) does not results in the action being cancelled. 
* Bug fixed allowing non-finite soil moisture parameters (1 layer) to be non-finite. Models with non-finite values now throw an error.
* Bug fixed causing the building of a model_TFN model to fail when it contains a transformed forcing input having >1 input forcing variables. 
* Bug fixed in cmaes.m casuing non-reproducible solutions when the same random seed is used. Problem was caused by random sampling within a parallel for-loop used when bounds exceeded. This for-loop is no longer parallelised.
* Bug fixed in spuci.m casuing non-reproducible solutions when the same random seed is used. Problem was caused by random sampling within the parallel for-loops for the complex evolutions and the initial sampling of the population.
* Bug fixed in climateTransform_soilMoistureModels() and climateTransform_soilMoistureModels_2layer() causing the simulation of land cover change (i.e. using two parallel soil stores) to fail. 

16 September 2022
* Bug fixed causing hydrosight icon to not be displayed when model)TFN_gui errors/warnings are thrown.
* Input data (forcing and coordinates) checks for missing table values added to model_TFN_gui(). This was done to fix issue #21.
* Input data checks (forcing and head) for missing table values added also added to HydroSight_GUI.onBuildModels(). Forcing data is also now sorted chronologically.
