@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:715c982de6b002e0daea7df0ca0e883ae3af9ec180d68841949dba03e9a8386a
-size 513915
+oid sha256:65eea7309f329889671bca22a8be9674f3cd9eeb64981a5034c302df4d8015f2
+size 96196
