@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:dc9c23946860a4a1aee9c08c4c710f7500a22d5bbf76909e70b4234d3b868152
-size 57412823
+oid sha256:3df04f0788ef661412e17ba4ee3bd40774a85138bea071bf627f830b2ce52889
+size 53338570
