@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:85de60cf4b51c8c2ba3dfcf40aca379fd6d9520a9251f4e471c443dfc616f537
-size 224108
+oid sha256:03779eba3656a9537e75d62e76c2e907dc544ee6f4af2a1b34aab90d451f8d2b
+size 71722
