@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:8ad02428bbdbb691d7e3a4ed5a4e65c06e7f4fc86d3ba9471b2978068bff2ef9
-size 312545
+oid sha256:9198dd7dd2f2c58df5a800a778ea59a3f030342a1a5dc6df06eb7ca4a73f0120
+size 22629
