@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:98da2c7f6e72033fee35f423e80b84ba3e789ba731358389aab9f1428a8fbedd
+oid sha256:43403b8092119cd7b5bb645c6f89ff1a02269db162db0efe515bb81587710204
 size 343152
