@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:3a46dd1f244f0f40109c4c6248a2f23f3fa77d6c001a74248fd9dbac5cc9e439
-size 12926220
+oid sha256:acba70ebbb7a7dfd1dd56139f7371f0dbcc7ad0b1a53b649cb7b4f416699bf45
+size 9276672
