@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:937bf473450c9ae112cd15e009d8880ade1af94e285711d3b318174f29767579
+oid sha256:4454f896d6f4437a0462588442608915e75d152566939c8b8cf662c9862c7357
 size 1069
